# e-learning-app

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api_examples/: enroll_all.py
config/nginx/: default.conf.template
config/uwsgi/: uwsgi.ini
educa/: asgi.py  settings.py  urls.py
educa/chat/: apps.py  consumers.py  routing.py  views.py
educa/chat/templates/chat/: room.html
educa/courses/: apps.py  fields.py  forms.py  middleware.py  models.py  urls.py  views.py
educa/courses/api/: serializers.py  urls.py  views.py
educa/courses/fixtures/: subjects.json
educa/courses/migrations/: 0001_initial.py  0002_video_text_image_file_content.py  0003_alter_content_options_alter_module_options_and_more.py  0004_course_students.py
educa/courses/templates/: base.html
educa/courses/templates/courses/course/: detail.html  list.html
educa/courses/templates/courses/manage/course/: delete.html  list.html
educa/courses/templates/courses/manage/module/: content_list.html  formset.html
educa/courses/templates/registration/: login.html
educa/settings/: base.py  prod.py
educa/students/: apps.py  forms.py  urls.py  views.py
educa/students/management/commands/: enroll_reminder.py
educa/students/templates/students/course/: detail.html  list.html
educa/students/templates/students/student/: registration.html
media/files/: Open_Server_Panel_5.4.3_x64_21.08.2022_MULTILANG__RUS_rutracker-6250329.torrent
