[tool.poetry]
name = "e-learning-app"
version = "0.1.0"
description = ""
authors = ["Anton Shefer <rezajkee@mail.ru>"]
readme = "README.md"
packages = [{include = "e_learning_app"}]

[tool.poetry.dependencies]
python = "^3.8.1"
Django = "^4.1.4"
django-extensions = "^3.2.1"
python-dotenv = "^0.21.0"
Pillow = "^9.3.0"
django-braces = "^1.15.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
extend-exclude = '''
/(
  | migrations
)/
'''
